Very HTML & CSS done

--- a/styles.css
+++ b/styles.css
@@ -72,3 +72,48 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+.bg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  gap: 1rem;
+}
+
+.option {
+  text-align: center;
+  height: 75px;
+  width: 200px;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+
+.score-container {
+  display: flex;
+  justify-content: space-around;
+  width: 416px;
+  margin: auto;
+  text-align: center;
+}
+
+.check-btn {
+  background-color: lime;
+  text-align: center;
+  border: 2px solid black;
+  padding: 3px;
+  margin: 1rem;
+  border-radius: 5px;
+  width: 5rem;
+}
+
+.score-label,
+.timer {
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 2px 5px;
+}
